# leetcode-python

./: pyproject.toml
.github/workflows/: ci.yml
problems/algorithms/array/: build_array_from_permutation.py  concatenation_of_array.py  container_with_most_water.py  number_of_good_pairs.py  plus_one.py  remove_duplicates.py  remove_element.py  search_insert_position.py  single_number.py  two_sum.py
tests/algorithms/array/: test_build_array_from_permutation.py  test_concatenation_of_array.py  test_container_with_most_water.py  test_number_of_good_pairs.py  test_plus_one.py  test_remove_duplicates.py  test_remove_element.py  test_search_insert_position.py  test_single_number.py  test_two_sum.py
