[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Jay Hsia <jayhsia1997@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
