[tool.poetry]
name = "leetcode-python"
version = "0.1.0"
description = ""
authors = ["Jay Hsia <jayhsia1997@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
